# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  dev-build-render-db.sh  dev-build.sh  pyproject.toml
.github/workflows/: python-app.yml
page_analyzer/: app.py  repo.py  service.py  url_service.py
page_analyzer/templates/: base.html  index.html  main.html  url.html  urls.html
