[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "SEO page analyzer"
authors = ["Efimov Egor <odes36@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
